--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,15 @@
 *.exe
 *.out
 *.app
+
+# G3D files
+x64
+build
+*.db
+*.opendb
+data-files\log.txt
+data-files\g3d-license.txt
+
+# Vim
+*~
+*.sw[a-p]
