--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,8 @@ x64
 build
 *.db
 *.opendb
-data-files\log.txt
-data-files\g3d-license.txt
+*/data-files/log.txt
+*/data-files/g3d-license.txt
 
 # Vim
 *~
